--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ header {
     padding: 20px 35px  0 35px ;
 }
 
+header a {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+}
+
 .nav-links {
     display: flex;
     gap: 1rem;
@@ -26,11 +32,6 @@ header {
     list-style: none;
 }
 
-.nav-link a {
-    text-decoration: none;
-    color: #000;
-    cursor: pointer;
-}
 
 .nav-link:nth-child(3) a {
     background-color: rgb(254, 82, 3);
@@ -108,7 +109,9 @@ header {
 footer {
     height: 27vh;
     background-color: rgb(66, 63, 63);
-    padding: 20px 25px
+    padding: 30px 35px;
+    display: flex;
+    justify-content: space-between;
 }
 
 footer h2 {
@@ -116,15 +119,26 @@ footer h2 {
     color: whitesmoke;
 }
 
+footer li {
+    list-style: none;
+    color: white;
+    line-height: 32px;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
+
+footer li:hover {
+    color: rgb(254, 82, 3);
+}
 
 footer .social-media-icon-container {
     display: flex;
     gap: 20px;
     margin-top: 10px;
     margin-left: 3px;
-    list-style: none;
 }
 
 footer .icon {
     width: 20px;
 }
+
