--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@ header {
     padding: 20px 35px 0 35px;
 }
 
-header a {
-    text-decoration: none;
-    color: #000;
+
+.logo {
+    width: 80px;
     cursor: pointer;
 }
 
@@ -32,11 +32,23 @@ header a {
     list-style: none;
 }
 
+.nav-links a {
+    padding: 0.3rem 1rem;
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+}
+
+
+.nav-links a:hover {
+    background-color: rgb(185, 185, 224);
+    padding: 0.3rem 1rem;
+    border-radius: 8px;
+}
 
 .nav-link:nth-child(3) a {
     background-color: rgb(254, 82, 3);
     color: #ffffff;
-    padding: 0.3rem 1rem;
     border-radius: 8px;
 }
 
@@ -54,8 +66,10 @@ header a {
     box-shadow: inset 0 80px 30px rgba(0, 0, 0, 0.8);
 }
 
-.membresias-section:hover, .sedes-section:hover,.entrenamientos-section:hover {
-    animation: zoomImage  1s ease-out both;
+.membresias-section:hover,
+.sedes-section:hover,
+.entrenamientos-section:hover {
+    animation: zoomImage 1s ease-out both;
 }
 
 .membresias-section h2 {
@@ -141,7 +155,7 @@ footer li {
 }
 
 footer li:hover {
-    color: rgb(254, 82, 3);
+    color: rgb(245, 132, 80);
 }
 
 footer .social-media-icon-container {
@@ -153,12 +167,24 @@ footer .social-media-icon-container {
 
 footer .icon {
     width: 20px;
+    filter: invert(1);
+}
+
+footer .icon:hover {
+    filter: invert(0.4) sepia(100%) saturate(1000%)
+}
+
+.fixed-whatsapp-logo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 3vw;
+    cursor: pointer;
 }
 
 
-
 @keyframes zoomImage {
-    0%{
+    0% {
         background-size: 100%;
     }
 
@@ -166,6 +192,4 @@ footer .icon {
         background-size: 110%;
     }
 
-   
 }
-
