--- a/styles.css
+++ b/styles.css
@@ -6,27 +6,36 @@
 
 body {
     min-height: 100vh;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem;
 }
 
 header {
-    height: 80px;
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 35px 0 35px;
 }
-
 
 .logo {
     width: 80px;
     cursor: pointer;
 }
 
+.nav-bar {
+    display: flex;
+  padding-right: 2rem;
+}
+
+.menu-toggle {
+    align-self: center;
+    display: none;
+}
+
 .nav-links {
     display: flex;
-    gap: 1rem;
     font-size: 1.37rem;
     font-weight: bold;
     list-style: none;
@@ -53,7 +62,9 @@ header {
 }
 
 .container {
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .membresias-section {
@@ -61,6 +72,7 @@ header {
     background-size: cover;
     background-position: center;
     height: 40vh;
+    width: 100%;
     text-align: center;
     color: white;
     box-shadow: inset 0 80px 30px rgba(0, 0, 0, 0.8);
@@ -89,8 +101,9 @@ header {
 
 .sedes-section,
 .entrenamientos-section {
-    background-color: red;
     padding: 1.8rem;
+    width: 100%;
+   
 }
 
 .sedes-section {
@@ -101,6 +114,7 @@ header {
     background-image: url('./assets/gym-indoor.jpg');
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .entrenamientos-section {
@@ -109,6 +123,7 @@ header {
     background-image: url('./assets/woman.jpg');
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .sedes-section h2,
@@ -125,32 +140,26 @@ header {
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 1rem;
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
     height: 45vh;
-    margin-top: 1rem;
 }
 
 footer {
     height: 27vh;
+    width: 100%;
     background-color: rgb(66, 63, 63);
     padding: 30px 35px;
     display: flex;
     justify-content: space-between;
+    font-size: 0.9rem;
+    margin-top: 1rem;
 }
-
-footer a {
-    text-decoration: none;
-    color: whitesmoke;
-    cursor: pointer;
-}
-
 footer li {
     list-style: none;
     color: white;
     line-height: 32px;
-    font-size: 0.9rem;
     cursor: pointer;
 }
 
@@ -182,6 +191,7 @@ footer .icon:hover {
     cursor: pointer;
 }
 
+/* Animation */
 
 @keyframes zoomImage {
     0% {
@@ -192,4 +202,70 @@ footer .icon:hover {
         background-size: 110%;
     }
 
+}
+
+/*Responsive*/
+
+@media screen and (max-width: 767px) {
+
+    /* Adjust Header */
+    header {
+        padding: 0 15px;
+    }
+
+    /* Navigation Bar */
+    .nav-bar {
+        position: relative;
+    }
+
+    /* Menu Icon (Hamburger) */
+    .menu-toggle {
+        display: block;
+        font-size: 2rem;
+        cursor: pointer;
+    }
+
+    /* Navigation Links (Hidden by Default) */
+    .nav-links {
+        display: none;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Active State (When Menu is Open) */
+    .nav-links.active {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba(206, 206, 206, 0.85);
+        padding: 15px;
+        border-radius: 8px;
+        width: max-content;
+    }
+
+    /* Navigation Links Styling */
+    .nav-links a {
+        color: #000;
+        display: block;
+    }
+
+    /* main content */
+
+    .wrapper{
+        flex-direction: column;
+        justify-content: start;
+    }
+
+
+    footer {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .fixed-whatsapp-logo {
+       width: 10vw;
+    }
 }
