--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,13 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-    min-height: 100vh;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    padding: 0 1rem;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    width: 80px;
-    cursor: pointer;
-}
-
-.nav-bar {
-    display: flex;
-    padding-right: 2rem;
-}
-
-.menu-toggle {
-    align-self: center;
-    display: none;
-}
-
-.nav-links {
-    display: flex;
-    font-size: 1.37rem;
-    font-weight: bold;
-    list-style: none;
-}
-
-.nav-links a {
-    padding: 0.3rem 1rem;
-    text-decoration: none;
-    color: #000;
-    cursor: pointer;
-}
-
-
-.nav-links a:hover {
-    background-color: rgb(185, 185, 224);
-    padding: 0.3rem 1rem;
-    border-radius: 8px;
-}
-
-.nav-link:nth-child(3) a {
-    background-color: rgb(254, 82, 3);
-    color: #ffffff;
-    border-radius: 8px;
-}
 
 .container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.container a {
+    text-decoration: none;
 }
 
 .membresias-section {
