--- a/css/membresias.css
+++ b/css/membresias.css
@@ -71,7 +71,7 @@
 
 
 .second-section {
-  background-color: rgb(219, 219, 219);
+  background-color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
   padding: 0.8rem;
@@ -82,15 +82,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 50px ;
+  padding: 20px 50px;
   width: 100%;
+  height: 100%;
+
 }
 
 .text-container .text {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 }
 
 .text-container .text h3{
@@ -109,10 +112,11 @@
   color: #000000;
   background-color: inherit;
   padding: 20px;
-  width: 30%;
+  width: 25%;
   font-weight: bold;
   cursor: pointer;
-  margin-bottom: 12px;
+  margin-bottom: 119px;
+ 
 }
 
 .text-container button:hover {
@@ -172,6 +176,7 @@
   .second-section {
     height: auto;
     flex-direction: column-reverse;
+    padding: 0;
   }
 
   .second-section img {
