--- a/css/global.css
+++ b/css/global.css
@@ -62,6 +62,52 @@ header {
 }
 
 
+footer {
+  height: 27vh;
+  width: 100%;
+  background-color: rgb(66, 63, 63);
+  padding: 30px 20px;
+  display: flex;
+  justify-content: space-around;
+  font-size: 0.9rem;
+  margin-top: 1rem;
+}
+
+footer li {
+  list-style: none;
+  color: white;
+  line-height: 32px;
+  cursor: pointer;
+}
+
+footer li:hover {
+  color: rgb(245, 132, 80);
+}
+
+footer .social-media-icon-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 10px;
+  margin-left: 3px;
+}
+
+footer .icon {
+  width: 20px;
+  filter: invert(1);
+}
+
+footer .icon:hover {
+  filter: invert(0.4) sepia(100%) saturate(1000%)
+}
+
+.fixed-whatsapp-logo {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  width: 3vw;
+  cursor: pointer;
+}
+
 
 @media screen and (max-width: 640px) {
 
@@ -70,8 +116,9 @@ header {
       justify-content: space-between;
       padding: 0;
       padding-right: 1rem;
-      
   }
+
+
 
   /* Navigation Bar */
   .nav-bar {
@@ -114,11 +161,16 @@ header {
       margin-right: 0;
   }
 
+
+  .wrapper {
+    gap: 0;
+  }
   
   footer {
     flex-direction: column;
     height: auto;
-
+    margin-top: 0;
+    gap: 30px;
 }
 
 .terms-conditions-container ul li:last-child {
