--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
-
-
 .container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  
 }
 
 .container a {
@@ -108,74 +107,45 @@
 @media screen and (max-width: 640px) {
 
     /* main content */
-
     .wrapper {
         flex-direction: column;
         justify-content: start;
         height: auto;
+        gap: 0;
     }
-
 
 }
 
 @media screen and (max-width: 768px) {
-
-.wrapper {
-    flex-direction: column;
-    height: auto;
-}
-
-.social-media-icon-container{
-    flex-wrap: wrap;
-}
-
-footer {
-    font-size: 12px;
-    gap: 20px;
-}
-
-.fixed-whatsapp-logo {
-    width: 40px;
-}
-}
-
-@media screen and (max-width: 1024px){
     .wrapper {
         flex-direction: column;
         height: auto;
     }
-    
-    .social-media-icon-container{
-        flex-wrap: wrap;
-    }
-    
-    footer {
-        font-size: 12px;
-        gap: 30px;
-    }
-    
-    .fixed-whatsapp-logo {
-        width: 50px;
+}
+
+@media screen and (max-width: 1024px) {
+    .wrapper {
+        flex-direction: column;
+        height: auto;
+        gap: 0;
     }
 }
 
 @media screen and (max-width: 1440px) {
-
     .wrapper {
         flex-direction: column;
         height: auto;
     }
 
-
-    .social-media-icon-container{
+    .social-media-icon-container {
         flex-wrap: wrap;
     }
-    
+
     footer {
         font-size: 12px;
         gap: 30px;
     }
-    
+
     .fixed-whatsapp-logo {
         width: 50px;
     }
