--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 .container {
     display: flex;
+    height: 100%;
     flex-direction: column;
-    gap: 1rem;
-  
+    gap: 3px;
 }
 
 .container a {
@@ -17,13 +17,18 @@
     width: 100%;
     text-align: center;
     color: white;
-    box-shadow: inset 0 80px 30px rgba(0, 0, 0, 0.8);
+    box-shadow: inset 0 80px 30px rgba(0, 0, 0, 0.9);
+}
+
+.membresias-section,.sedes-section,.entrenamientos-section {
+    z-index: -1;
 }
 
 .membresias-section:hover,
 .sedes-section:hover,
 .entrenamientos-section:hover {
     animation: zoomImage 1s ease-out both;
+    cursor: pointer;
 }
 
 .membresias-section h2 {
@@ -35,24 +40,18 @@
     font-size: 1.5rem;
 }
 
-.membresias-section,
-.sedes-section,
-.entrenamientos-section:hover {
-    cursor: pointer;
-}
-
 .sedes-section,
 .entrenamientos-section {
     padding: 1.8rem;
     width: 100%;
-
+    height: 40vh;
 }
 
 .sedes-section {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    box-shadow: inset 0 -80px 30px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 -80px 30px rgba(0, 0, 0, 0.9);
     background-image: url('./assets/gym-indoor.jpg');
     background-position: center;
     background-size: cover;
@@ -61,7 +60,7 @@
 
 .entrenamientos-section {
     text-align: end;
-    box-shadow: inset 0 80px 30px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 80px 30px rgba(0, 0, 0, 0.9);
     background-image: url('./assets/woman.jpg');
     background-position: center;
     background-size: cover;
@@ -84,7 +83,7 @@
 .wrapper {
     display: flex;
     justify-content: space-around;
-    gap: 1rem;
+    gap: 3px;
     height: 45vh;
 }
 
@@ -99,54 +98,53 @@
     100% {
         background-size: 110%;
     }
-
 }
 
 /*Mobile*/
 
-@media screen and (max-width: 640px) {
-
-    /* main content */
+@media screen and (max-width: 600px) {
+  
     .wrapper {
         flex-direction: column;
         justify-content: start;
         height: auto;
-        gap: 0;
     }
+}
 
+@media screen and (min-width: 600px){
+   
+    .wrapper {
+        flex-direction: column;
+        height: auto;
+    }
 }
 
 @media screen and (max-width: 768px) {
-    .wrapper {
-        flex-direction: column;
-        height: auto;
+
+    .membresias-section,.sedes-section,.entrenamientos-section {
+        height: 21vh;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 992px) {
+
+    .membresias-section {
+        padding: 1rem;
+    }
     .wrapper {
-        flex-direction: column;
-        height: auto;
-        gap: 0;
+        flex-direction: row;
     }
 }
 
-@media screen and (max-width: 1440px) {
+
+@media screen and (min-width: 1200px){
+
+    .membresias-section,.sedes-section,.entrenamientos-section {
+        height: 50vh;
+    }
+
     .wrapper {
-        flex-direction: column;
-        height: auto;
+        flex-direction: row;
     }
 
-    .social-media-icon-container {
-        flex-wrap: wrap;
-    }
-
-    footer {
-        font-size: 12px;
-        gap: 30px;
-    }
-
-    .fixed-whatsapp-logo {
-        width: 50px;
-    }
 }
